--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
-                        <h1 class="title-text text-uppercase">We Are DOMAIN DUDE.
-                            Design, Development & Marketing
+                        <h1 class="title-text text-uppercase">We Are WEB WITCHERS.
+                            Design, Development & Marketing solutions 
                             Solution Provider.</h1>
-                        <h4 class="title-text text-uppercase">DOMAIN DUDE is a group of Young and Enthusiatic minds, provides software and digital marketing solutions to all Businesses, Enterprises and Start-ups.</h4>
+                        <h4 class="title-text text-uppercase">WEB WITCHERS is a group of passionate website developers with a crystal clear vision and fixate mission to achieve our goals by providing finest solutions and best seriveces on websites designing and digital marketing solutions to all New Businesses startups, Enterprenuers and Enterprises out there.</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">More About Us
